--- a/DownwellClone/DownwellClone/DownwellClone.csproj
+++ b/DownwellClone/DownwellClone/DownwellClone.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Animation.cs" />
     <Compile Include="AnimationFrame.cs" />
     <Compile Include="CharacterEntity.cs" />
+    <Compile Include="Background.cs" />
+    <Compile Include="Cloud.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
