Enemies added, UI added, Gameloop in basic form and first 1.0 build made in bin

--- a/DownwellClone/DownwellClone/DownwellClone.csproj
+++ b/DownwellClone/DownwellClone/DownwellClone.csproj
@@ -46,6 +46,10 @@
     <Compile Include="AnimationFrame.cs" />
     <Compile Include="CharacterEntity.cs" />
     <Compile Include="Background.cs" />
+    <Compile Include="Arrow.cs" />
+    <Compile Include="UI.cs" />
+    <Compile Include="Pickup.cs" />
+    <Compile Include="Enemy.cs" />
     <Compile Include="Cloud.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
