--- a/DownwellClone/DownwellClone/Fall.DesktopGL.csproj
+++ b/DownwellClone/DownwellClone/Fall.DesktopGL.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{F85EB6C6-D5FC-4FFC-97C4-58FF13DC3C5F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DownwellClone</RootNamespace>
-    <AssemblyName>DownwellClone</AssemblyName>
+    <RootNamespace>Fall</RootNamespace>
+    <AssemblyName>Fall</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -51,7 +51,6 @@
     <Compile Include="Pickup.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Cloud.cs" />
-    <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -70,7 +69,6 @@
     <EmbeddedResource Include="Icon.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\DesktopGL\x86\SDL2.dll">
       <Link>x86\SDL2.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -118,10 +116,7 @@
     <None Include="app.manifest" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="Content\charactersheet.png" />
-    <Content Include="Content\TitleScreen.png" />
-  </ItemGroup>
+  <Import Project="..\..\Fall\Fall\Fall.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
